libs/error-stack/tests/snapshots/test_debug__sources_nested_alternate@hooks.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:#?}\")"
---
context A
|- at tests/common/snapshots.rs:220:10
|- 2
|- 1
|
|-> context A
 |  |- at tests/common/snapshots.rs:214:10
 |  |- 4
 |  |- 3
 |  |
 |  |-> root error
 |      |- at tests/common/mod.rs:4:5
 |      |- 6
 |
 |> context A
    |- at tests/common/snapshots.rs:209:10
    |- 5
    |- 3
    |
    |-> context A
    |   |- at tests/common/snapshots.rs:207:10
    |   |- 7
    |
    |-> context A
     |  |- at tests/common/snapshots.rs:198:34
     |  |- 9
     |  |- 8
     |  |
     |  |-> root error
     |      |- at tests/common/mod.rs:4:5
     |
     |> context A
     |  |- at tests/common/snapshots.rs:192:10
     |  |- 13
     |  |- 10
     |  |- 16
     |  |- 9
     |  |- 8
     |  |
     |  |-> root error
     |      |- at tests/common/mod.rs:4:5
     |
     |> context A
     |  |- at tests/common/snapshots.rs:178:10
     |  |- 15
     |  |- 14
     |  |- 10
     |  |- 16
     |  |- 9
     |  |- 8
     |  |
     |  |-> root error
     |      |- at tests/common/mod.rs:4:5
     |
     |> context A
     |  |- at tests/common/snapshots.rs:188:10
     |  |- 11
     |  |- 9
     |  |- 8
     |  |
     |  |-> root error
     |      |- at tests/common/mod.rs:4:5
     |
     |> context A
        |- at tests/common/snapshots.rs:184:10
        |- 12
        |- 9
        |- 8
        |
        |-> context A
        |   |- at tests/common/snapshots.rs:183:10
        |
        |-> root error
            |- at tests/common/mod.rs:4:5
