libs/error-stack/tests/snapshots/test_debug__sources_nested_alternate@spantrace.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:#?}\")"
---
context A
├╴at tests/test_debug.rs:206:10
├╴2
├╴1
│
╰┬▶ context A
 │  ├╴at tests/test_debug.rs:200:10
 │  ├╴4
 │  ├╴3
 │  │
 │  ╰─▶ root error
 │      ├╴at tests/common.rs:4:5
 │      ├╴span trace with 2 frames (1)
 │      ╰╴6
 │
 ╰▶ context A
    ├╴at tests/test_debug.rs:195:10
    ├╴5
    ├╴3
    │
    ├─▶ context A
    │   ├╴at tests/test_debug.rs:193:10
    │   ╰╴7
    │
    ╰┬▶ context A
     │  ├╴at tests/test_debug.rs:184:34
     │  ├╴9
     │  ├╴8
     │  │
     │  ╰─▶ root error
     │      ├╴at tests/common.rs:4:5
     │      ╰╴span trace with 2 frames (2)
     │
     ├▶ context A
     │  ├╴at tests/test_debug.rs:178:10
     │  ├╴13
     │  ├╴10
     │  ├╴16
     │  ├╴9
     │  ├╴8
     │  │
     │  ╰─▶ root error
     │      ├╴at tests/common.rs:4:5
     │      ╰╴span trace with 2 frames (3)
     │
     ├▶ context A
     │  ├╴at tests/test_debug.rs:164:10
     │  ├╴15
     │  ├╴14
     │  ├╴10
     │  ├╴16
     │  ├╴9
     │  ├╴8
     │  │
     │  ╰─▶ root error
     │      ├╴at tests/common.rs:4:5
     │      ╰╴span trace with 2 frames (4)
     │
     ├▶ context A
     │  ├╴at tests/test_debug.rs:174:10
     │  ├╴11
     │  ├╴9
     │  ├╴8
     │  │
     │  ╰─▶ root error
     │      ├╴at tests/common.rs:4:5
     │      ╰╴span trace with 2 frames (5)
     │
     ╰▶ context A
        ├╴at tests/test_debug.rs:170:10
        ├╴12
        ├╴9
        ├╴8
        │
        ├─▶ context A
        │   ╰╴at tests/test_debug.rs:169:10
        │
        ╰─▶ root error
            ├╴at tests/common.rs:4:5
            ╰╴span trace with 2 frames (6)

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

span trace No. 1
  [redacted]

span trace No. 2
  [redacted]

span trace No. 3
  [redacted]

span trace No. 4
  [redacted]

span trace No. 5
  [redacted]

span trace No. 6
  [redacted]
